--- a/tfs/Cargo.toml
+++ b/tfs/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "tfs"
 version = "0.1.0"
+authors = ["MaskerDad <zhouquan1511@163.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+spin = "0.7.0"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+
+[profile.release]
+debug = true
